loading editado, favs

--- a/mb-app/src/components/Card/Card.css
+++ b/mb-app/src/components/Card/Card.css
@@ -50,6 +50,12 @@
     cursor: pointer;
 }
 
+.loadingContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 @media (max-width: 380px){
     .card {
         width: 245px;
