estilos y bg image

--- a/mb-app/src/App.css
+++ b/mb-app/src/App.css
@@ -7,7 +7,7 @@
   --secondary-color-opacity: #9d03fc88;
   --skyblue-color: #5bbbd9;
   --grayish-blue: hsl(220, 14%, 75%);
-  --white: #f8feff;
+  --white: #faf5f9;
   --white-glass: #f8feff69;
 }
 
