--- a/mb-app/src/components/SlideshowGallery/SlideshowGallery.css
+++ b/mb-app/src/components/SlideshowGallery/SlideshowGallery.css
@@ -2,6 +2,10 @@
     padding: 100px 20px 35px;
     background-color: #ddbfe1;
     text-align: center;
+    background-image: url(../../images/bg6.png);
+    background-repeat: no-repeat;
+    position: relative;
+    background-size: 100% 100%;
 }
 
 .mainTitle {
@@ -13,22 +17,27 @@ h4 {
 }
 
 p {
+    font-weight: 500;
     font-size: .8em;
 }
 
 .items {
     cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    color: white;
+    background-color: #c6bfe18e;
+    border-radius: 50%;
 }
 
 .items h4 p {
-    position: absolute;
-    top: 0;
-    left: 0;
     transition: transform 0.3s ease-out;
 }
 
 .items:hover {
     transform: scale(1.1);
+    transition: background-color 350ms linear;
 }
 
 /* --main-color: #ff0080;
